[package]
name = "wasm-aes"
version = "0.1.0"
edition = "2024"
authors = ["Valerius Mattfeld <git@valerius.me>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
sha2 = "0.10"
aes = "0.8"
cbc = "0.1"
pbkdf2 = { version = "0.12", default-features = false, features = ["simple"] }
hmac = "0.12"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
